@@ -4,7 +4,7 @@
 
 #ifndef __BACKEND_AGG_H
 #define __BACKEND_AGG_H
-
+#include <utility>
 #include "CXX/Extensions.hxx"
 #include "agg_buffer.h"  // a swig wrapper
 
